...
    }
  }

  @override
  Widget build(BuildContext context) {
    return FilledDropDownButton(
      title: const Text('Import model'),
      items: [
        MenuFlyoutItem(text: const Text('Hugging Face'), onPressed: () { GoRouter.of(context).push('/models/import'); }),
        MenuFlyoutItem(text: const Text('Local disk'), onPressed: () {
          showImportModelDialog(context,
            callback: (projects) {
              if (projects != null && projects.length == 1) {
                GoRouter.of(context).pushReplacement("/models/inference", extra: projects.first);
              }
...
