...
                                  GoRouter.of(context).push('/models/download', extra: project);
                                }
                              });
                            }
                          }
                        ),
                        child: const Text("Import selected model"),
                      ),
                    );
                  }),
                  const CloseModelButton(),
                ]
              ),
...
