...
                          children: [
                            Row(
                              children: [
                                ConstrainedBox(
                                  constraints: const BoxConstraints(maxWidth: 280),
                                  child: Semantics(
                                    label: 'Find a model',
                                    child: SearchBar(
                                      placeholder: 'Find a model',
                                      onChange: (value) {
                                        filter.name = value;
                                      },
                                    ),
...
